# gate

./: .gitignore  CMakeLists.txt  LICENSE  README.md  flake.nix  shell.nix
app/: CMakeLists.txt  main.c
docs/: CMakeLists.txt
include/core/: core.h
include/event/: event.h  event_data.h
include/http/request/: absolute_form.h  absolute_path.h  absolute_uri.h  asterik_form.h  authority.h  authority_form.h  dec_octet.h  fragment.h  h16.h  hier_part.h  host.h  http_name.h  http_version.h  ip_literal.h  ipv4address.h  ipv6address.h  ipvfuture.h  ls32.h  method.h  misc.h  origin_form.h  parse_result.h  path_abempty.h  path_absolute.h  path_rootless.h  pchar.h  pct_encoded.h  port.h  query.h  reg_name.h  request.h  request_target.h  scheme.h  segment.h  segment_nz.h  sub_delims.h  unreserved.h  userinfo.h
include/logger/: log.h
include/misc/math/: math.h
include/misc/trie/: trie.h
include/misc/vector/: iter.h  vector.h
include/socket/: listener.h  socket.h
include/thread/: thread.h
src/: CMakeLists.txt
src/core/: CMakeLists.txt  core.c
src/event/: CMakeLists.txt  event.c  event_data.c
src/http/: CMakeLists.txt
src/http/request/: CMakeLists.txt  absolute_form.c  absolute_path.c  absolute_uri.c  asterik_form.c  authority.c  authority_form.c  dec_octet.c  fragment.c  h16.c  hier_part.c  host.c  http_name.c  http_version.c  ip_literal.c  ipv4address.c  ipv6address.c  ipvfuture.c  ls32.c  method.c  misc.c  origin_form.c  path_abempty.c  path_absolute.c  path_rootless.c  pchar.c  pct_encoded.c  port.c  query.c  reg_name.c  request.c  request_target.c  scheme.c  segment.c  segment_nz.c  sub_delims.c  unreserved.c  userinfo.c
src/logger/: CMakeLists.txt  log.c
src/misc/: CMakeLists.txt
src/misc/math/: CMakeLists.txt  math.c
src/misc/trie/: CMakeLists.txt  trie.c
src/misc/vector/: CMakeLists.txt  iter.c  vector.c
src/socket/: CMakeLists.txt  listener.c  socket.c
src/thread/: thread.c
test/: CMakeLists.txt
test/http/request/: CMakeLists.txt  absolute_path.cpp  absolute_uri.cpp  authority.cpp  authority_form.cpp  dec_octet.cpp  fragment.cpp  h16.cpp  hier_part.cpp  host.cpp  ip_literal.cpp  ipv4address.cpp  ipv6address.cpp  ipvfuture.cpp  ls32.cpp  origin_form.cpp  path_abempty.cpp  path_absolute.cpp  path_rootless.cpp  pchar.cpp  pct_encoded.cpp  port.cpp  query_parse.cpp  reg_name.cpp  request_target.cpp  scheme.cpp  segment.cpp  segment_nz.cpp  sub_delims.cpp  unreserved.cpp  userinfo.cpp
test/misc/vector/: CMakeLists.txt  vector.cpp
