set(HEADER_LIST
        "${gate_SOURCE_DIR}/include/http/request/request.h"
        "${gate_SOURCE_DIR}/include/http/request/method.h"
        "${gate_SOURCE_DIR}/include/http/request/misc.h"
        "${gate_SOURCE_DIR}/include/http/request/origin_form.h"
        "${gate_SOURCE_DIR}/include/http/request/segment.h"
        "${gate_SOURCE_DIR}/include/http/request/absolute_path.h"
        "${gate_SOURCE_DIR}/include/http/request/pchar.h"
        "${gate_SOURCE_DIR}/include/http/request/unreserved.h"
        "${gate_SOURCE_DIR}/include/http/request/pct_encoded.h"
        "${gate_SOURCE_DIR}/include/http/request/sub_delims.h"
        "${gate_SOURCE_DIR}/include/http/request/query.h"
        "${gate_SOURCE_DIR}/include/http/request/absolute_form.h"
        "${gate_SOURCE_DIR}/include/http/request/absolute_uri.h"
        "${gate_SOURCE_DIR}/include/http/request/scheme.h"
        "${gate_SOURCE_DIR}/include/http/request/hier_part.h"
        "${gate_SOURCE_DIR}/include/http/request/authority.h"
        "${gate_SOURCE_DIR}/include/http/request/userinfo.h"
        "${gate_SOURCE_DIR}/include/http/request/host.h"
        "${gate_SOURCE_DIR}/include/http/request/ip_literal.h"
        "${gate_SOURCE_DIR}/include/http/request/ipv6address.h"
        "${gate_SOURCE_DIR}/include/http/request/h16.h"
        "${gate_SOURCE_DIR}/include/http/request/ls32.h"
        "${gate_SOURCE_DIR}/include/http/request/ipv4address.h"
        "${gate_SOURCE_DIR}/include/http/request/dec_octet.h"
        "${gate_SOURCE_DIR}/include/http/request/ipvfuture.h"
        "${gate_SOURCE_DIR}/include/http/request/reg_name.h"
        "${gate_SOURCE_DIR}/include/http/request/port.h"
        "${gate_SOURCE_DIR}/include/http/request/path_abempty.h"
        "${gate_SOURCE_DIR}/include/http/request/path_absolute.h"
        "${gate_SOURCE_DIR}/include/http/request/path_rootless.h"
        "${gate_SOURCE_DIR}/include/http/request/fragment.h"
        "${gate_SOURCE_DIR}/include/http/request/asterik_form.h"
        "${gate_SOURCE_DIR}/include/http/request/authority_form.h"
)

add_library(request
        request.c
        method.c
        misc.c
        request_target.c
        origin_form.c
        segment.c
        absolute_path.c
        pchar.c
        unreserved.c
        pct_encoded.c
        sub_delims.c
        query.c
        absolute_form.c
        absolute_uri.c
        scheme.c
        hier_part.c
        authority.c
        userinfo.c
        host.c
        ip_literal.c
        ipv6address.c
        h16.c
        ls32.c
        ipv4address.c
        dec_octet.c
        ipvfuture.c
        reg_name.c
        port.c
        path_abempty.c
        path_absolute.c
        segment_nz.c
        segment_nz.c
        path_rootless.c
        fragment.c
        authority_form.c
        asterik_form.c
        ${HEADER_LIST})

target_link_libraries(request PRIVATE
        vector
        trie
)

target_include_directories(request PUBLIC ${gate_SOURCE_DIR}/include)
